[package]
name = "containerd-sandbox"
version = "0.1.0"
authors = ["The Kuasar Authors"]
keywords = ["containerd", "kuasar"]
description = "containerd sandboxer extension"

edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
log = "0.4.17"
go-flag = "0.1.0"
thiserror = "1.0.31"
tonic = "0.7.2"
prost = "0.10.4"
prost-types = "0.10.1"
tokio = { version="1.19.2", features = ["full"]}
tokio-stream = "0.1.8"
async-trait = "0.1.56"
async-stream = "0.3.3"
futures = "0.3.21"
oci-spec = "0.5.7"
serde_json = "1.0.82"
libc = "0.2.107"
nix = "0.23.0"
serde_derive = "1.0.130"
serde = "1.0.130"
time = "0.3.5"
pin-project-lite = "0.2.7"
base64 = "0.22.1"

[build-dependencies]
tonic-build = "0.7.2"
